--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/cookie-session": "^2.0.49",
     "argon2": "^0.44.0",
     "better-sqlite3": "^12.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-session": "^2.1.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.25"
